APIs/googleapis.com/dfareporting/v3.4/java-client/docs/SiteVideoSettings.md


# SiteVideoSettings

Video Settings

## Properties

| Name | Type | Description | Notes |
|------------ | ------------- | ------------- | -------------|
|**companionSettings** | [**SiteCompanionSetting**](SiteCompanionSetting.md) |  |  [optional] |
|**kind** | **String** | Identifies what kind of resource this is. Value: the fixed string \&quot;dfareporting#siteVideoSettings\&quot;. |  [optional] |
|**obaEnabled** | **Boolean** | Whether OBA icons are enabled for this placement. |  [optional] |
|**obaSettings** | [**ObaIcon**](ObaIcon.md) |  |  [optional] |
|**orientation** | [**OrientationEnum**](#OrientationEnum) | Orientation of a site template used for video. This will act as default for new placements created under this site. |  [optional] |
|**skippableSettings** | [**SiteSkippableSetting**](SiteSkippableSetting.md) |  |  [optional] |
|**transcodeSettings** | [**SiteTranscodeSetting**](SiteTranscodeSetting.md) |  |  [optional] |



## Enum: OrientationEnum

| Name | Value |
|---- | -----|
| ANY | &quot;ANY&quot; |
| LANDSCAPE | &quot;LANDSCAPE&quot; |
| PORTRAIT | &quot;PORTRAIT&quot; |



